# SSEMBabyEmulator

./: Cargo.toml  LICENCE  README.md
src/: errors.rs  lib.rs
src/assembler/: errors.rs  linker.rs  linker_errors.rs  mod.rs  parse_errors.rs  parser.rs
src/assembler/linker/: errors.rs  linker_errors.rs  mod.rs
src/assembler/linker/tests/: mod.rs  unlinked_data_tests.rs
src/assembler/parser/: errors.rs  mod.rs  parse_errors.rs
src/assembler/parser/tests/: instruction_test.rs  mod.rs  value_tests.rs
src/core/: errors.rs  instructions.rs  mod.rs  tests.rs
src/core/instructions/: mod.rs  tests.rs
